fix(css): xt-body added overflow-x-hidden to prevent horizontal scrolling

--- a/src/gatsby/assets/styles/_demo.css
+++ b/src/gatsby/assets/styles/_demo.css
@@ -3,7 +3,6 @@
 .gatsby_iframe-inside {
   #gatsby_body-inner {
     visibility: visible;
-    overflow: hidden;
     height: initial;
     max-width: none;
     min-height: 100vh;
